--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "load-grunt-tasks": "~3.1.0",
-    "grunt-babel": "~4.0.0"
+    "grunt-babel": "~4.0.0",
+    "grunt-contrib-jasmine": "~0.8.2",
+    "karma": "~0.12.31",
+    "jasmine-core": "~2.2.0",
+    "karma-jasmine": "~0.3.5"
   }
 }
