--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "grunt-contrib-jasmine": "~0.8.2",
     "karma": "~0.12.31",
     "jasmine-core": "~2.2.0",
-    "karma-jasmine": "~0.3.5"
+    "karma-jasmine": "~0.3.5",
+    "requirejs": "~2.1.16",
+    "karma-requirejs": "~0.2.2",
+    "karma-chrome-launcher": "~0.1.7",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-babel-preprocessor": "~4.0.0",
+    "grunt-karma": "~0.10.1"
   }
 }
