Getting rid of phantom - WIP

--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
   "author": "Daniel Stankevich",
   "license": "MIT",
   "devDependencies": {
+    "babel": "^4.7.16",
     "grunt": "~0.4.5",
-    "load-grunt-tasks": "~3.1.0",
     "grunt-babel": "~4.0.0",
     "grunt-contrib-jasmine": "~0.8.2",
-    "karma": "~0.12.31",
+    "grunt-karma": "~0.10.1",
+    "jasmine": "^2.2.1",
     "jasmine-core": "~2.2.0",
-    "karma-jasmine": "~0.3.5",
-    "requirejs": "~2.1.16",
-    "karma-requirejs": "~0.2.2",
-    "karma-chrome-launcher": "~0.1.7",
-    "karma-phantomjs-launcher": "~0.1.4",
+    "jasmine-reporters": "^2.0.5",
+    "json-loader": "^0.5.1",
+    "karma": "~0.12.31",
     "karma-babel-preprocessor": "~4.0.0",
-    "grunt-karma": "~0.10.1"
+    "karma-chrome-launcher": "~0.1.7",
+    "karma-jasmine": "~0.3.5",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-requirejs": "~0.2.2",
+    "load-grunt-tasks": "~3.1.0",
+    "requirejs": "~2.1.16"
   }
 }
